--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <h1>Welcome to my website!</h1>
-Check out <a href="cassiexu123.github.io/plotlydiploy">my plots</a>
+Check out <a href="/plotlydiploy">my plots</a>
 </html>
